--- a/assets/css/style-blog.css
+++ b/assets/css/style-blog.css
@@ -28,6 +28,10 @@ section {
   display: block;
 }
 
+header {
+  padding-left: 2px !important;
+}
+
 body {
   margin: 0;
   font-family: 'Inter', sans-serif;
@@ -330,6 +334,21 @@ mark,
   max-width: 100%;
   height: auto;
 }
+
+blockquote {
+  background-color: #313131;
+  padding: 2em;
+  color: #fff;
+  border-radius: 1em;
+}
+
+.bio {
+width: 25em;
+}
+
+.desc {
+  margin-left: 2em;
+  }
 
 .figure {
   display: inline-block;
@@ -2348,11 +2367,23 @@ h3,
 }
 
 .slider-text h1 {
-  font-size: 80px;
+  font-size: 70px;
   color: #fff;
   line-height: 1.2;
   font-weight: 700;
   font-family: "Poppins", Arial, sans-serif;
+}
+
+.column-pic {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
 @media (max-width: 1199.98px) {
@@ -2570,6 +2601,7 @@ h3,
   box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
   border-radius: 20px;
   margin-bottom: 30px;
+  padding-bottom: 2px;
 }
 
 .btn {
@@ -3411,90 +3443,126 @@ background-color: #5b7ed4;
   border: 1px solid #000;
 }
 
-.comment-form-wrap {
-  clear: both;
-}
 
-.comment-list {
-  padding: 0;
-  margin: 0;
-}
 
-.comment-list .children {
-  padding: 50px 0 0 40px;
-  margin: 0;
-  float: left;
+/* Styles the thumbnail */
+
+a.lightbox img {
+  height: 150px;
+  border: 3px solid white;
+  box-shadow: 0px 0px 8px rgba(0,0,0,.3);
+  margin: 94px 20px 20px 20px;
+  }
+  
+  /* Styles the lightbox, removes it from sight and adds the fade-in transition */
+  
+  .lightbox-target {
+  position: fixed;
+  top: -100%;
   width: 100%;
-}
-
-.comment-list li {
-  padding: 0;
-  margin: 0 0 30px 0;
-  float: left;
+  background: rgba(0,0,0,.7);
   width: 100%;
-  clear: both;
-  list-style: none;
-}
-
-.comment-list li .vcard {
-  width: 80px;
-  float: left;
-}
-
-.comment-list li .vcard img {
-  width: 50px;
-  border-radius: 50%;
-}
-
-.comment-list li .comment-body {
-  float: right;
-  width: calc(100% - 80px);
-}
-
-.comment-list li .comment-body h3 {
-  font-size: 20px;
-}
-
-.comment-list li .comment-body .meta {
-  text-transform: uppercase;
-  font-size: 13px;
-  letter-spacing: .1em;
-  color: #ccc;
-}
-
-.comment-list li .comment-body .reply {
-  padding: 5px 10px;
-  background: #e6e6e6;
-  color: #000000;
-  text-transform: uppercase;
-  font-size: 11px;
-  letter-spacing: .1em;
-  font-weight: 400;
-  border-radius: 4px;
-}
-
-.comment-list li .comment-body .reply:hover {
-  color: #fff;
-  background: black;
-}
-
-.search-form .form-group {
-  position: relative;
-}
-
-.search-form .form-group input {
-  padding-right: 50px;
-  font-size: 14px;
-}
-
-.search-form .icon {
+  opacity: 0;
+  -webkit-transition: opacity .5s ease-in-out;
+  -moz-transition: opacity .5s ease-in-out;
+  -o-transition: opacity .5s ease-in-out;
+  transition: opacity .5s ease-in-out;
+  overflow: hidden;
+   
+  }
+  
+  /* Styles the lightbox image, centers it vertically and horizontally, adds the zoom-in transition and makes it responsive using a combination of margin and absolute positioning */
+  
+  .lightbox-target img {
+  margin: auto;
   position: absolute;
-  top: 50%;
-  right: 20px;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
+  top: 0;
+  left:0;
+  right:0;
+  bottom: 0;
+  max-height: 0%;
+  max-width: 0%;
+  border: 3px solid white;
+  box-shadow: 0px 0px 8px rgba(0,0,0,.3);
+  box-sizing: border-box;
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+    
+  }
+  
+  /* Styles the close link, adds the slide down transition */
+  
+  a.lightbox-close {
+  display: block;
+  width:50px;
+  height:50px;
+  box-sizing: border-box;
+  background: white;
+  color: black;
+  text-decoration: none;
+  position: absolute;
+  top: -80px;
+  right: 0;
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  }
+  
+  /* Provides part of the "X" to eliminate an image from the close link */
+  
+  a.lightbox-close:before {
+  content: "";
+  display: block;
+  height: 30px;
+  width: 1px;
+  background: black;
+  position: absolute;
+  left: 26px;
+  top:10px;
+  -webkit-transform:rotate(45deg);
+  -moz-transform:rotate(45deg);
+  -o-transform:rotate(45deg);
+  transform:rotate(45deg);
+  }
+  
+  /* Provides part of the "X" to eliminate an image from the close link */
+  
+  a.lightbox-close:after {
+  content: "";
+  display: block;
+  height: 30px;
+  width: 1px;
+  background: black;
+  position: absolute;
+  left: 26px;
+  top:10px;
+  -webkit-transform:rotate(-45deg);
+  -moz-transform:rotate(-45deg);
+  -o-transform:rotate(-45deg);
+  transform:rotate(-45deg);
+  }
+  
+  /* Uses the :target pseudo-class to perform the animations upon clicking the .lightbox-target anchor */
+  
+  .lightbox-target:target {
+  opacity: 1;
+  top: 0;
+  bottom: 0;
+    overflow:scroll;
+  }
+  
+  .lightbox-target:target img {
+  max-height: 100%;
+  max-width: 100%;
+  }
+  
+  .lightbox-target:target a.lightbox-close {
+  top: 0;
+  }
+  
 
 .sidebar-box {
   margin-bottom: 40px;
