--- a/assets/css/style-blog.css
+++ b/assets/css/style-blog.css
@@ -51,6 +51,7 @@ hr {
   background-color: #a6a6a6;
   margin-top: 1em;
   margin-bottom: 2em;
+  width: 100% !important;
 }
 
 h1,
@@ -2377,7 +2378,7 @@ h3,
 .column-pic {
   float: left;
   width: 50%;
-  padding: 5px;
+  padding: 10px;
 }
 
 .row::after {
@@ -2616,6 +2617,8 @@ h3,
 
 figcaption p {
   margin-top: 10px;
+  font-size: 15px;
+  color: #96a2b5;
 }
 
 .btn:hover,
