--- a/assets/css/style-blog.css
+++ b/assets/css/style-blog.css
@@ -405,6 +405,8 @@ a>code {
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
+  padding-top: 0px;
+  padding: 10px;
 }
 
 .no-gutters {
@@ -1892,7 +1894,7 @@ button.bg-dark:focus {
 }
 
 .mb-4 {
-  margin-bottom: 1.5rem !important;
+  margin-bottom: 0rem !important;
 }
 
 .mt-5 {
@@ -2618,7 +2620,7 @@ h3,
 figcaption p {
   margin-top: 10px;
   font-size: 15px;
-  color: #96a2b5;
+  color: #8ca1c4;
 }
 
 .btn:hover,
@@ -2813,13 +2815,13 @@ textarea.form-control {
 }
 
 .ftco-section {
-  padding: 7em 0;
+  padding: 0em 0;
   position: relative;
 }
 
 @media (max-width: 767.98px) {
   .ftco-section {
-    padding: 6em 0;
+    padding: 0em 0;
   }
 }
 
