--- a/style-extension-1.css
+++ b/style-extension-1.css
@@ -29,6 +29,50 @@ img.profile-pic {
     color: #80a8cc;
 }
 
+
+/*  */
+footer {
+    padding-bottom: 30px;
+}
+
+#gdpr-thing {
+    background-color: #d3d3d3;
+    padding-left: 1em;
+    padding-right: 3em;
+    display: flex;
+}
+
+p.gdpr-txt {
+    padding-left: 1em;
+    padding-right: 2em;
+    color: #8e4848;
+    margin-bottom: 0rem;
+}
+
+.gdpr-btn {
+    position: relative;
+    z-index: 1;
+    min-width: 160px;
+    height: 46px;
+    line-height: 42px;
+    font-size: 16px;
+    font-weight: 500;
+    display: inline-block;
+    padding: 0 30px;
+    text-align: center;
+    text-transform: capitalize;
+    background-color: transparent;
+    color: #ffffff;
+    border: 2px solid #898a77;
+    border-radius: 60px;
+    -webkit-transition-duration: 500ms;
+    -o-transition-duration: 500ms;
+    transition-duration: 500ms;
+    margin-left: 20px;
+    margin-bottom: 11px;
+}
+  
+
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
     img.profile-pic {
         width: 310px;
@@ -61,6 +105,7 @@ img.profile-pic {
         padding: 1.5em;
         font-size: 10px;
     }
+    
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
@@ -78,6 +123,12 @@ img.profile-pic {
         padding: 1.5em;
         font-size: 10px;
     }
+
+    .wrapper.show {
+        left: 25px;
+        bottom: 30px;
+    }
+    
 }
 
 @media only screen and (min-width: 320px) and (max-width: 575px) {
@@ -95,13 +146,18 @@ img.profile-pic {
         padding: 1em;
         font-size: 10px;
     }
+
+    .wrapper.show {
+        left: 25px;
+        bottom: 30px;
+    }
 }
 
 
 
 
 
-
+/*  */
 @media (min-height: 531px) and (max-height: 620px) {
     .breadcrumb-content {
         scale: 0.8;
@@ -195,39 +251,4 @@ img.profile-pic {
     .profile-det {
         display: none;
     }
-}
-
-/*  */
-@media (min-width: 32em) {
-    .cc-window.cc-banner {
-      padding: 1.5em 1.8em
-    }
-    .cc-message {
-      font-size: 0.9em;
-      line-height: 1.4
-    }
-    .cc-compliance {
-      padding-left: 4em
-    }
-  }
-
-.cookie-container .agree {
-    flex: 3 150px;
-    text-align: center;
-}
-
-.agree button {
-    background: var(--button-background);
-    border: 2px solid #898a77;
-    padding: 0.4rem 1.2rem;
-    cursor: pointer;
-    border-radius: 20px;
-    font-size: 1rem;
-    margin-bottom: 10px;
-}
-
-.agree button:hover {
-    background-color: #80a8cc;
-    color: #fff;
-    transition-duration: 500ms;
 }
