--- a/style.css
+++ b/style.css
@@ -827,7 +827,7 @@ section.follow-area.clearfix {
 }
 
 #profile-picture {
-    background-image: url("./img/bg-img/hero-bg.png");
+    background-image: url("../img/bg-img/hero-bg.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
