--- a/style-extension-1.css
+++ b/style-extension-1.css
@@ -1,378 +1,377 @@
 img.profile-pic {
-    width: 320px;
-    height: 320px;
+  width: 320px;
+  height: 320px;
 }
 
 .profile-det {
-    padding: 4em;
-    padding-top: 0.5em;
-    padding-bottom: 2.5em;
+  padding: 4em;
+  padding-top: 0.5em;
+  padding-bottom: 2.5em;
 }
 
 .profile-name {
-    color: #fff;
-    font-size: 35px;
-    padding-top: 1em;
+  color: #fff;
+  font-size: 35px;
+  padding-top: 1em;
 }
 
 .profile-desc {
-    color: #898a77;
-    font-size: 20px;
-    font-weight: normal;
+  color: #898a77;
+  font-size: 20px;
+  font-weight: normal;
 }
 
 .profile-link a {
-    padding: 1.3em;
+  padding: 1.3em;
 }
 
 .profile-link a:hover {
-    color: #80a8cc;
+  color: #80a8cc;
 }
 
 
 /*  */
-footer {
-    padding-bottom: 30px;
-}
-  
+/* footer {
+  padding-bottom: 30px;
+} */
+
 
 
 .owl-carousel.owl-loaded {
-    display: block;
-    scale: 0.65;
+  display: block;
+  scale: 0.65;
 }
 
 .skill-ara {
-    padding-left: 20px;
-    padding-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 
 .skill-ara .single-skill {
-    margin-bottom: 25px;
-  }
-  
-  .skill-ara .single-skill .progress-count {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .skill-ara .single-skill .progress-count p {
-    font-size: 16px;
-    font-weight: 400;
-    text-transform: capitalize;
-    color: #000d21;
-    margin-bottom: 10px;
-  }
-  
-  .skill-ara .single-skill .progress-count span {
-    font-size: 16px;
-    font-weight: 400;
-    text-transform: capitalize;
-    color: #898a77;
-    margin: 0;
-  }
-  
-  .skill-ara .single-skill .progress {
-    height: 4px;
-    border-radius: 0;
-    background: #eff3cf;
-    border-radius: 4px;
-  }
-  
-  .skill-ara .single-skill .progress-bar {
-    background-color: #898a77;
-    border-radius: 7px;
-  }
-  
-  .gallery-area {
-    position: relative;
-  }
-  
-  .gallery-area.gallery-area2::before {
-    position: unset;
-  }
-  
+  margin-bottom: 25px;
+}
+
+.skill-ara .single-skill .progress-count {
+  display: flex;
+  justify-content: space-between;
+}
+
+.skill-ara .single-skill .progress-count p {
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: capitalize;
+  color: #000d21;
+  margin-bottom: 10px;
+}
+
+.skill-ara .single-skill .progress-count span {
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: capitalize;
+  color: #898a77;
+  margin: 0;
+}
+
+.skill-ara .single-skill .progress {
+  height: 4px;
+  border-radius: 0;
+  background-color: #dbe3e9;
+  border-radius: 4px;
+}
+
+.skill-ara .single-skill .progress-bar {
+  background-color: #80a8cc;
+  border-radius: 7px;
+}
+
+.gallery-area {
+  position: relative;
+}
+
+.gallery-area.gallery-area2::before {
+  position: unset;
+}
+
+.gallery-area::before {
+  position: absolute;
+  content: "";
+  width: 74%;
+  height: 70%;
+  background: #F8F8F8;
+  border-radius: 90px 0px 0px 90px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
+
+@media only screen and (min-width: 2100px) and (max-width: 2600px) {
   .gallery-area::before {
-    position: absolute;
-    content: "";
-    width: 74%;
-    height: 70%;
-    background: #F8F8F8;
-    border-radius: 90px 0px 0px 90px;
-    top: 0;
-    right: 0;
-    bottom: 0;
+    width: 68%;
   }
-  
-  @media only screen and (min-width: 2100px) and (max-width: 2600px) {
-    .gallery-area::before {
-      width: 68%;
-    }
-  }
-  
-  .gallery-area .box {
-    position: relative;
-    border-radius: 10px;
-  }
-  
-  .gallery-area .box .gallery-img {
-    height: 565px;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  
-  .gallery-area .box .small-img {
-    height: 400px;
-  }
-  
-  @media only screen and (min-width: 768px) and (max-width: 991px) {
-    .gallery-area .box .small-img {
-      height: 380px;
-    }
-  }
-  
-  @media only screen and (min-width: 576px) and (max-width: 767px) {
-    .gallery-area .box .small-img {
-      height: 335px;
-    }
-  }
-  
-  @media (max-width: 575px) {
-    .gallery-area .box .small-img {
-      height: 335px;
-    }
-  }
-  
-  .gallery-area .box .overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 133, 83, 0.3);
-    top: 0;
-    left: 0;
-    border-radius: 10px;
-  }
-  
-  .gallery-area .box .overlay .overlay-content {
-    position: absolute;
-    left: 10%;
-    bottom: 37px;
-  }
-  
-  .gallery-area .box .overlay .overlay-content a {
-    color: #000000;
-    display: inline-block;
-    font-size: 26px;
-    -webkit-transition: 0.4s;
-    -moz-transition: 0.4s;
-    -o-transition: 0.4s;
-    transition: 0.4s;
-    transform: scale(1);
-  }
-  
-  @media only screen and (min-width: 576px) and (max-width: 767px) {
-    .gallery-area .box .overlay .overlay-content a {
-      font-size: 16px;
-    }
-  }
-  
-  @media (max-width: 575px) {
-    .gallery-area .box .overlay .overlay-content a {
-      font-size: 22px;
-    }
-  }
-  
-  .gallery-area .box .overlay .overlay-content a:hover {
-    transform: scale(1.08);
-  }
-  
-  .gallery-area .box.snake {
-    position: relative;
-    overflow: hidden;
-  }
+}
 
+.gallery-area .box {
+  position: relative;
+  border-radius: 10px;
+}
 
+.gallery-area .box .gallery-img {
+  height: 565px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
-
-
-/*  */
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-    img.profile-pic {
-        width: 310px;
-        height: 310px;
-    }
-
-    .profile-det {
-        padding: 2em;
-        padding-top: 0.5em;
-    }
-
-    .profile-link a {
-        padding: 1.5em;
-        font-size: 10px;
-    }
+.gallery-area .box .small-img {
+  height: 400px;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-    img.profile-pic {
-        width: 310px;
-        height: 310px;
-    }
-
-    .profile-det {
-        padding: 2em;
-        padding-top: 0.5em;
-    }
-
-    .profile-link a {
-        padding: 1.5em;
-        font-size: 10px;
-    }
-    
+  .gallery-area .box .small-img {
+    height: 380px;
+  }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
-    img.profile-pic {
-        width: 280px;
-        height: 280px;
-    }
+  .gallery-area .box .small-img {
+    height: 335px;
+  }
+}
 
-    .profile-det {
-        padding: 2em;
-        padding-top: 0.5em;
-    }
+@media (max-width: 575px) {
+  .gallery-area .box .small-img {
+    height: 335px;
+  }
+}
 
-    .profile-link a {
-        padding: 1.5em;
-        font-size: 10px;
-    }
+.gallery-area .box .overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 133, 83, 0.3);
+  top: 0;
+  left: 0;
+  border-radius: 10px;
+}
 
-    .wrapper.show {
-        left: 25px;
-        bottom: 30px;
-    }
-    
+.gallery-area .box .overlay .overlay-content {
+  position: absolute;
+  left: 10%;
+  bottom: 37px;
+}
+
+.gallery-area .box .overlay .overlay-content a {
+  color: #000000;
+  display: inline-block;
+  font-size: 26px;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+  transform: scale(1);
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .gallery-area .box .overlay .overlay-content a {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 575px) {
+  .gallery-area .box .overlay .overlay-content a {
+    font-size: 22px;
+  }
+}
+
+.gallery-area .box .overlay .overlay-content a:hover {
+  transform: scale(1.08);
+}
+
+.gallery-area .box.snake {
+  position: relative;
+  overflow: hidden;
+}
+
+
+
+
+
+/* Width */
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  img.profile-pic {
+    width: 310px;
+    height: 310px;
+  }
+
+  .profile-det {
+    padding: 2em;
+    padding-top: 0.5em;
+  }
+
+  .profile-link a {
+    padding: 1.5em;
+    font-size: 10px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  img.profile-pic {
+    width: 310px;
+    height: 310px;
+  }
+
+  .profile-det {
+    padding: 2em;
+    padding-top: 0.5em;
+  }
+
+  .profile-link a {
+    padding: 1.5em;
+    font-size: 10px;
+  }
+
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  img.profile-pic {
+    width: 280px;
+    height: 280px;
+  }
+
+  .profile-det {
+    padding: 2em;
+    padding-top: 0.5em;
+  }
+
+  .profile-link a {
+    padding: 1.5em;
+    font-size: 10px;
+  }
+
+  .wrapper.show {
+    left: 25px;
+    bottom: 30px;
+  }
+
 }
 
 @media only screen and (min-width: 320px) and (max-width: 575px) {
-    img.profile-pic {
-        width: 250px;
-        height: 250px;
-    }
+  img.profile-pic {
+    width: 250px;
+    height: 250px;
+  }
 
-    .profile-det {
-        padding: 2em;
-        padding-top: 0.5em;
-    }
+  .profile-det {
+    padding: 2em;
+    padding-top: 0.5em;
+  }
 
-    .profile-link a {
-        padding: 1em;
-        font-size: 10px;
-    }
+  .profile-link a {
+    padding: 1em;
+    font-size: 10px;
+  }
 
-    .wrapper.show {
-        left: 25px;
-        bottom: 30px;
-    }
+  .footer-content .copywrite-text {
+    padding-right: 10px;
+  }
 }
 
 
 
 
 
-/*  */
+/* Height */
 @media (min-height: 531px) and (max-height: 620px) {
-    .breadcrumb-content {
-        scale: 0.8;
-        padding-top: 1em;
-    }
+  .breadcrumb-content {
+    scale: 0.8;
+    padding-top: 1em;
+  }
 
-    .profile-det {
-        padding-top: 0em;
-        padding-bottom: 0.5em;
-    }
+  .profile-det {
+    padding-top: 0em;
+    padding-bottom: 0.5em;
+  }
 }
 
 @media (min-height: 510px) and (max-height: 530px) {
-    img.profile-pic {
-        width: 250px;
-        height: 250px;
-    }
+  img.profile-pic {
+    width: 250px;
+    height: 250px;
+  }
 
-    .breadcrumb-content {
-        scale: 0.8;
-        padding-top: 0em;
-    }
+  .breadcrumb-content {
+    scale: 0.8;
+    padding-top: 0em;
+  }
 
-    .profile-det {
-        padding-top: 0em;
-        padding-bottom: 0.5em;
-    }
+  .profile-det {
+    padding-top: 0em;
+    padding-bottom: 0.5em;
+  }
 }
 
 @media (min-height: 400px) and (max-height: 529px) {
-    img.profile-pic {
-        width: 200px;
-        height: 200px;
-    }
+  img.profile-pic {
+    width: 200px;
+    height: 200px;
+  }
 
-    .breadcrumb-content {
-        scale: 0.8;
-        padding-top: 0em;
-        margin-top: 30px;
-    }
+  .breadcrumb-content {
+    scale: 0.8;
+    padding-top: 0em;
+    margin-top: 30px;
+  }
 
-    .profile-det {
-        padding-top: 0em;
-        padding-bottom: 0.5em;
-    }
+  .profile-det {
+    padding-top: 0em;
+    padding-bottom: 0.5em;
+  }
 }
 
 @media (min-height: 320px) and (max-height: 399px) {
-    img.profile-pic {
-        width: 190px;
-        height: 190px;
-    }
+  img.profile-pic {
+    width: 190px;
+    height: 190px;
+  }
 
-    .profile-name {
-        padding-top: 0.5em;
-    }
+  .profile-name {
+    padding-top: 0.5em;
+  }
 
-    .profile-desc {
-        padding-bottom: 0.5em;
-    }
+  .profile-desc {
+    padding-bottom: 0.5em;
+  }
 
-    .breadcrumb-content {
-        scale: 0.8;
-        padding-top: 0em;
-        margin-top: 10px;
-    }
+  .breadcrumb-content {
+    scale: 0.8;
+    padding-top: 0em;
+    margin-top: 10px;
+  }
 
-    .profile-det {
-        padding-top: 0em;
-        padding-bottom: 0em;
-    }
+  .profile-det {
+    padding-top: 0em;
+    padding-bottom: 0em;
+  }
 }
 
 @media (max-height: 319px) {
-    img.profile-pic {
-        display: none;
-    }
+  img.profile-pic {
+    display: none;
+  }
 
-    .profile-name {
-        display: none;
-    }
+  .profile-name {
+    display: none;
+  }
 
-    .profile-desc {
-        display: none;
-    }
+  .profile-desc {
+    display: none;
+  }
 
-    .breadcrumb-content {
-        display: none;
-    }
+  .breadcrumb-content {
+    display: none;
+  }
 
-    .profile-det {
-        display: none;
-    }
+  .profile-det {
+    display: none;
+  }
 }
