--- a/style.css
+++ b/style.css
@@ -540,9 +540,8 @@ section.follow-area.clearfix {
     padding: 0 30px;
     text-align: center;
     text-transform: capitalize;
-    background-color: transparent;
+    background-color: #e4e6cf;
     color: #ffffff;
-    border: 2px solid #898a77;
     border-radius: 60px;
     -webkit-transition-duration: 500ms;
     -o-transition-duration: 500ms;
@@ -682,6 +681,19 @@ section.follow-area.clearfix {
     padding: 0;
 }
 
+.classycloseIcon .cross-wrap {
+    display: none;
+}
+
+.breakpoint-on .classynav > ul > li > a {
+    background-color: #e9eae5;
+    border-bottom: 1px solid #898a77;
+}
+
+.breakpoint-on .classy-navbar .classy-menu {
+    background-color: #e9eae5;
+}
+
 @media only screen and (max-width: 767px) {
     .classy-nav-container .classy-navbar .nav-brand {
         max-width: 90px;
@@ -716,7 +728,7 @@ section.follow-area.clearfix {
 
     .classy-nav-container .classy-navbar .classynav ul li a:hover,
     .classy-nav-container .classy-navbar .classynav ul li a:focus {
-        color: #fc6060;
+        color: #80a8cc;
     }
 }
 
@@ -728,7 +740,7 @@ section.follow-area.clearfix {
 
     .classy-nav-container .classy-navbar .classynav ul li a:hover,
     .classy-nav-container .classy-navbar .classynav ul li a:focus {
-        color: #fc6060;
+        color: #80a8cc;
     }
 }
 
@@ -739,7 +751,7 @@ section.follow-area.clearfix {
     height: 42px;
     line-height: 42px;
     padding: 0 30px;
-    color: #252525;
+    color: #898a77;
 }
 
 .classy-nav-container .classy-navbar .classynav ul li.cn-dropdown-item ul li a:focus,
@@ -995,6 +1007,24 @@ section.follow-area.clearfix {
 
 .fadeInUp-animation {
     animation: 1.0s fadeInUp;
+}
+
+@keyframes slideInLeft {
+    0% {
+        -webkit-transform: translate3d(-100%,0,0);
+        transform: translate3d(-100%,0,0);
+        visibility: visible
+    }
+
+    to {
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0)
+    }
+}
+
+.slideInLeft {
+    -webkit-animation-name: slideInLeft;
+    animation-name: slideInLeft
 }
 
 
@@ -1472,7 +1502,7 @@ section.follow-area.clearfix {
     font-size: 30px;
     position: absolute;
     top: -38px;
-    left: 17%;
+    left: 50%;
     margin-left: -38px;
 }
 
@@ -1511,6 +1541,20 @@ section.follow-area.clearfix {
     color: #000;
 }
 
+.box-indiv {
+    margin-bottom: -4em;
+}
+
+.box-indiv-2 {
+    margin-bottom: 1em;
+}
+
+.sect-title {
+    margin-bottom: -2em;
+}
+
+
+
 /*  */
 .timeline-content {
     -webkit-transition-duration: 800ms;
@@ -1540,7 +1584,8 @@ section.follow-area.clearfix {
     font-size: 19px;
     position: absolute;
     top: -26px;
-    left: 40%;
+    left: 43%;
+    right: 43%;
     margin-left: -38px;
 }
 
@@ -1559,7 +1604,8 @@ section.follow-area.clearfix {
     font-size: 19px;
     position: absolute;
     top: -26px;
-    left: 40%;
+    left: 43%;
+    right: 43%;
     margin-left: -38px;
 }
 
@@ -1578,7 +1624,8 @@ section.follow-area.clearfix {
     font-size: 19px;
     position: absolute;
     top: -26px;
-    left: 32%;
+    left: 30%;
+    right: 30%;
     margin-left: -38px;
 }
 
@@ -2462,16 +2509,22 @@ section.follow-area.clearfix {
     margin-bottom: 40px;
 }
 
+/* .portfolio-menu {
+    background-color: #e4e6cf;
+    border-radius: 20px;
+} */
+
 .alime-projects-menu .portfolio-menu .btn {
     position: relative;
     z-index: 1;
-    padding: 0;
     border: 0;
-    background-color: transparent;
-    font-size: 30px;
+    background-color: #e4e6cf;
+    border-radius: 10px;
+    padding: 15px;
+    font-size: 17px;
     font-weight: 600;
-    border-radius: 0;
-    margin: 0 25px;
+    border-radius: 30px;
+    margin: 7px 15px;
     -webkit-transition-duration: 500ms;
     -o-transition-duration: 500ms;
     transition-duration: 500ms;
@@ -2479,28 +2532,22 @@ section.follow-area.clearfix {
 
 @media only screen and (max-width: 767px) {
     .alime-projects-menu .portfolio-menu .btn {
-        font-size: 30px;
-        margin: 0 5px;
+        font-size: 15px;
+        margin: 7px 5px;
     }
 }
 
-.alime-projects-menu .portfolio-menu .btn::after {
-    -webkit-transition-duration: 500ms;
-    -o-transition-duration: 500ms;
-    transition-duration: 500ms;
-    position: absolute;
-    width: 0%;
-    height: 3px;
-    background-color: #fc6060;
-    content: '';
-    bottom: -5px;
-    left: 0;
-    right: 0;
-    z-index: 1;
+
+.alime-projects-menu .portfolio-menu .btn.active {
+    background-color: #898a77;
+    color: #fff;
 }
 
-.alime-projects-menu .portfolio-menu .btn.active::after {
-    width: 100%;
+.alime-projects-menu .portfolio-menu .btn:hover {
+    background-color: #80a8cc;
+    color: #fff;
+    -webkit-box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
+    box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
 }
 
 .single-portfolio-content {
