--- a/style-extension-1.css
+++ b/style-extension-1.css
@@ -186,6 +186,52 @@ img.profile-pic {
 }
 
 
+/*--------------------------------------------------------------
+# Portfolio Details
+--------------------------------------------------------------*/
+
+.portfolio-details-slider img {
+  width: 100%;
+}
+
+.portfolio-details-slider .swiper-pagination {
+  margin-top: 30px;
+  position: relative;
+}
+
+.portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #898a77;
+  opacity: 1;
+}
+
+.portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #80a8cc;
+}
+
+.glightbox-clean .gslide-title {
+  font-size: 1em;
+  font-weight: 400;
+  font-family: 'Inter', sans-serif;
+  color: #fff;
+  margin-bottom: 19px;
+  line-height: 1.4em;
+}
+
+.screenS {
+  flex: 0 0 auto;
+  width: 50%;
+  padding: 30px;
+}
+
+.section-padding-screenS {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+  justify-content: center;
+}
+
 
 
 
@@ -241,11 +287,6 @@ img.profile-pic {
     font-size: 10px;
   }
 
-  .wrapper.show {
-    left: 25px;
-    bottom: 30px;
-  }
-
 }
 
 @media only screen and (min-width: 320px) and (max-width: 575px) {
@@ -266,6 +307,10 @@ img.profile-pic {
 
   .footer-content .copywrite-text {
     padding-right: 10px;
+  }
+
+  .screenS {
+    width: 100%;
   }
 }
 
