--- a/style.css
+++ b/style.css
@@ -1663,6 +1663,8 @@ section.follow-area.clearfix {
 
 .about-me-summ {
     background-color: #f5f6f2;
+    padding-top: 30px;
+    padding-bottom: 50px;
 }
 
 
