--- a/style-extension-1.css
+++ b/style-extension-1.css
@@ -233,6 +233,170 @@ img.profile-pic {
 }
 
 
+/*  */
+.breadcrumb-area .page-title-blog {
+  color: #ffffff;
+  font-size: 70px;
+}
+
+.mb-3 {
+  margin-bottom: 1rem !important;
+}
+
+.row-blog {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+  padding-top: 0px;
+  padding: 10px;
+}
+
+.column-pic {
+  float: left;
+  width: 50% !important;
+  padding: 10px !important;
+}
+
+figcaption p {
+  margin-top: 10px;
+  font-size: 15px;
+  color: #636457;
+}
+
+.container-blog {
+  width: 100%;
+  padding-right: 42px;
+  padding-left: 30px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.sidebar-box {
+  margin-bottom: 40px;
+  font-size: 15px;
+  width: 100%;
+  float: left;
+  background: #e9eae5;
+  padding: 20px;
+  border-radius: 20px;
+}
+
+.sidebar-box .heading {
+  font-size: 25px;
+  color: #fff;
+  font-weight: 700;
+  margin: 20px;
+  margin-bottom: 30px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #eee;
+  cursor: default;
+}
+
+.sidebar-box *:last-child {
+  margin-bottom: 0;
+}
+
+.mb-4 {
+  margin-bottom: 0rem !important;
+}
+
+.tagcloud a {
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 4px 10px;
+  margin-bottom: 7px;
+  margin-right: 4px;
+  border-radius: 4px;
+  color: #000;
+  border: 1px solid #ccc;
+  font-size: 11px;
+}
+
+.tagcloud a:hover {
+  border: 1px solid #000;
+}
+
+.bg-light {
+  background-color: #e9eae5 !important;
+  box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
+  border-radius: 20px;
+  margin-bottom: 30px;
+  padding-bottom: 2px;
+}
+.p-4 {
+  padding: 1.5rem !important;
+}
+.d-flex {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+}
+
+.desc {
+  margin-left: 2em;
+}
+
+.sidebar-box h3 {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.blog-img {
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  margin-top: 1.8em;
+}
+
+.block-21 .blog-img {
+  display: block;
+  height: 80px;
+  width: 80px;
+}
+
+.block-21 .text {
+  width: calc(100% - 100px);
+}
+
+.block-21 .text .heading {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.block-21 .text .meta {
+  margin-left: 20px;
+}
+
+h3.heading {
+  border-bottom: none !important;
+  margin-bottom: 10px !important;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.sidebar-col {
+  flex: 0 0 auto;
+  width: 100%;
+}
+
+.mb-5 {
+  margin-bottom: 3rem !important;
+}
+
+.row-blog>* {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x)* .5);
+  padding-left: calc(var(--bs-gutter-x)* .5);
+  margin-top: var(--bs-gutter-y);
+}
+
 
 
 /* Width */
@@ -267,6 +431,11 @@ img.profile-pic {
   .profile-link a {
     padding: 1.0em;
     font-size: 10px;
+  }
+
+  .breadcrumb-area .page-title-blog {
+    color: #ffffff;
+    font-size: 40px;
   }
 
 }
@@ -311,6 +480,11 @@ img.profile-pic {
 
   .screenS {
     width: 100%;
+  }
+
+  .breadcrumb-area .page-title-blog {
+    color: #ffffff;
+    font-size: 35px;
   }
 }
 
